--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,18 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
+    //Rx
+    implementation "io.reactivex.rxjava2:rxjava:2.1.8"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
     //RETROFIT
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation"com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    implementation "com.squareup.okhttp:logging-interceptor:2.6.0"
+
+    implementation "com.google.code.gson:gson:2.4"
+
+    implementation "com.squareup.okhttp3:okhttp:3.9.0"
 }
