--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,11 +90,13 @@ dependencies {
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:2.1.8"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
     //RETROFIT
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation"com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.9.1"
 
     implementation "com.squareup.okhttp:logging-interceptor:2.6.0"
 
