--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,8 @@ dependencies {
     implementation "com.google.code.gson:gson:2.4"
 
     implementation "com.squareup.okhttp3:okhttp:3.9.0"
+
+    //GLIDE
+    implementation "com.github.bumptech.glide:glide:4.7.1"
+    kapt "com.github.bumptech.glide:compiler:4.7.1"
 }
