--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,8 @@ dependencies {
     //GLIDE
     implementation "com.github.bumptech.glide:glide:4.7.1"
     kapt "com.github.bumptech.glide:compiler:4.7.1"
+
+    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
