--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.anko_version='0.10.5'
     ext.room_version = "1.1.0"
     ext.dagger_version = "2.13"
     ext.preference_room = "1.0.9"
