--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,16 @@ android {
         enabled = true
     }
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+        test.java.srcDirs += 'src/test/kotlin'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.pasotti.matteo.wikiheroes"
@@ -62,11 +72,28 @@ dependencies {
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
+    /*testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'*/
 
     kapt 'com.android.databinding:compiler:3.1.2'
+
+
+    //KOTLIN TESTING
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.10.0'
+    testImplementation 'org.assertj:assertj-core:3.8.0'
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.6.0"
+    testImplementation 'org.amshove.kluent:kluent:1.15'
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support:support-annotations:27.0.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
 
     //DAGGER2
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -114,4 +141,8 @@ dependencies {
 
     //ANKO KOTLIN
     implementation "org.jetbrains.anko:anko:$anko_version"
+
+    //TIMBER
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
