--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.ui.home.HomeActivity"/>
+        <activity android:name=".view.ui.HomeActivity"/>
         <activity android:name=".view.ui.home.login.LoginActivity" />
         <activity android:name=".view.ui.home.splash.SplashActivity"
             android:theme="@style/SplashTheme">
