--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
     ext.kotlin_version = '1.2.30'
     ext.anko_version='0.10.5'
     ext.room_version = "1.1.0"
+    ext.lifecycle_version = "1.1.1"
     ext.dagger_version = "2.13"
     ext.preference_room = "1.0.9"
     ext.retrofit_version = "2.4.0"
     ext.support_version = '27.1.1'
+    ext.lottie_version = '2.6.0'
+    ext.mockWebServer_version = '3.9.0'
+    ext.archCoreTesting_version = '1.1.0'
 
     repositories {
         google()
