--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,32 +73,23 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     //KOTLIN TESTING
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.11.0'
-    testImplementation 'org.mockito:mockito-inline:2.11.0'
-    testImplementation 'org.assertj:assertj-core:3.8.0'
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.6.0"
-    testImplementation 'org.amshove.kluent:kluent:1.15'
-
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
-    androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
-    androidTestImplementation 'androidx.annotation:annotation:1.0.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
-
+    androidTestImplementation "androidx.arch.core:core-testing:$coreTestingVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiAutomatorVersion"
+    testImplementation "junit:junit:$junitVersion"
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
     testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebServer_version"
 
 
     //ANDROID DEFAULT
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.annotation:annotation:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation "androidx.appcompat:appcompat:$support_version"
+    implementation "androidx.annotation:annotation:$support_version"
+    implementation "com.google.android.material:material:$support_version"
+    implementation "androidx.cardview:cardview:$support_version"
+    implementation "androidx.recyclerview:recyclerview:$support_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
 
     //DAGGER2
     implementation "com.google.dagger:dagger:$dagger_version"
@@ -109,8 +100,8 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     //ROOM
-    implementation 'androidx.room:room-runtime:2.1.0-alpha01'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha01'
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
 
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
@@ -130,8 +121,8 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:3.9.0"
 
     //GLIDE
-    implementation "com.github.bumptech.glide:glide:4.7.1"
-    kapt "com.github.bumptech.glide:compiler:4.7.1"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
 
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
 
@@ -145,9 +136,5 @@ dependencies {
 
     //LOTTIE ANIMATIONS
     implementation "com.airbnb.android:lottie:$lottie_version"
-
-    //PREFERENCE ROOM
-    implementation "com.github.skydoves:preferenceroom:$preference_room"
-    kapt "com.github.skydoves:preferenceroom-processor:$preference_room"
 
 }
