--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
-    ext.anko_version='0.10.5'
-    ext.room_version = "1.1.0"
-    ext.lifecycle_version = "1.1.1"
-    ext.dagger_version = "2.15"
-    ext.preference_room = "1.0.9"
-    ext.retrofit_version = "2.4.0"
-    ext.support_version = '27.1.1'
-    ext.lottie_version = '2.6.0'
-    ext.mockWebServer_version = '3.9.0'
-    ext.archCoreTesting_version = '1.1.0'
+
+    ext {
+        kotlin_version = '1.2.61'
+        anko_version='0.10.5'
+        room_version = '2.1.0-alpha01'
+        lifecycle_version = "1.1.1"
+        dagger_version = "2.15"
+        preference_room = "1.0.9"
+        retrofit_version = "2.4.0"
+        support_version = '1.0.0'
+        lottie_version = '2.6.0'
+        mockWebServer_version = '3.9.0'
+        archCoreTesting_version = '1.1.0'
+        espressoVersion = '3.1.0-alpha4'
+        coreTestingVersion = '2.0.0'
+        uiAutomatorVersion = '2.2.0-alpha4'
+        junitVersion = '4.12'
+        glideVersion = '4.8.0'
+        constraintLayoutVersion = '2.0.0-alpha2'
+    }
 
     repositories {
         google()
