created deatil comic and multiple shared transition. Fixes rendering problems with images

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.ui.detail_items.detail_comic.DetailComicActivity"/>
     </application>
 
 </manifest>
