--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
