developed structure for home navigation with scroll and disappear effect

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".view.ui.creator.CreatorDetailActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".view.ui.home.MainActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".view.ui.home.splash.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
