--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         shape_view_version = '1.4.6'
         timber_version = '4.7.1'
         androidx_version = '2.0.0'
+        version_navigation = "2.1.0-alpha02"
     }
 
     repositories {
@@ -36,10 +37,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath 'io.fabric.tools:gradle:1.+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
     }
 }
 
