--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,19 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
+            buildConfigField("String", "MARVEL_API_KEY", getApiKey())
+            buildConfigField("String", "MARVEL_PRIVATE_KEY", getPrivateApiKey())
         }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "MARVEL_API_KEY",  getApiKey())
+            buildConfigField("String", "MARVEL_PRIVATE_KEY",  getPrivateApiKey())
         }
     }
+
+
 
     flavorDimensions "variant"
     productFlavors {
@@ -67,6 +73,22 @@ android {
             buildConfigField "String", "VERSION", "\"version 1.0\""
         }
     }
+}
+
+def getApiKey() {
+    def keysFile = file("keys.properties")
+    def keysProperties = new Properties()
+    keysProperties.load(new FileInputStream(keysFile))
+    def tmdbApiKey = keysProperties['MARVEL_PUBLIC_KEY']
+    return tmdbApiKey
+}
+
+def getPrivateApiKey() {
+    def keysFile = file("keys.properties")
+    def keysProperties = new Properties()
+    keysProperties.load(new FileInputStream(keysFile))
+    def tmdbApiKey = keysProperties['MARVEL_PRIVATE_KEY']
+    return tmdbApiKey
 }
 
 dependencies {
@@ -139,5 +161,8 @@ dependencies {
 
     // ROBOLECTRIC
     testImplementation "org.robolectric:robolectric:$roboelectric_version"
+
+    //JODA TIME FOR DATES
+    implementation "joda-time:joda-time:2.10.2"
 
 }
