--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,13 +116,16 @@ dependencies {
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$androidx_version"
 
-    //RETROFIT and OKHTTP
+    //Okhttp3
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    //Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.9.1"
-    implementation "com.squareup.okhttp:logging-interceptor:2.6.0"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
     implementation "com.google.code.gson:gson:2.4"
-    implementation "com.squareup.okhttp3:okhttp:3.9.0"
 
     //GLIDE
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
@@ -144,5 +147,11 @@ dependencies {
 
     //JODA TIME FOR DATES
     implementation "joda-time:joda-time:2.10.2"
+
+    //Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutineVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutineVersion"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01"
 
 }
