--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.10'
+        kotlin_version = '1.3.31'
         kotlinCoroutineVersion = "1.0.1"
         anko_version='0.10.5'
         room_version = '2.1.0-alpha01'
@@ -25,7 +25,8 @@ buildscript {
         timber_version = '4.7.1'
         androidx_version = '2.0.0'
         moshiVersion="1.8.0"
-        okhttp3_version = "3.12.0"
+        okhttp3_version = "4.1.0"
+        koin_version = '0.9.1'
     }
 
     repositories {
